--- a/gig-microservice1/package.json
+++ b/gig-microservice1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon src/server.js"
   },
   "keywords": [],
@@ -21,6 +21,8 @@
     "amqplib": "^0.8.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "socket.io": "^4.3.1"
+    "jest": "^27.3.1",
+    "socket.io": "^4.3.1",
+    "supertest": "^6.1.6"
   }
 }
