--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,13 @@ jobs:
         node-version: [12.x, 14.x, 16.x]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup and run microservice 1
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - working-directory: ./gig-microservice1
+    - run: |
+        npm ci
+        npm run build --if-present
+        npm test
