--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,22 +5,13 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  testing:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup and run microservice 1
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - working-directory: ./gig-microservice1
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test
+      - uses: actions/checkout@v1
+      - name: Setup and run tests
+        working-directory: ./gig-microservice1
+        run: |
+          npm ci
+          npm run build --if-present
+          npm test
