--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  testing:
+  microservice1:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -17,8 +17,12 @@ jobs:
           npm ci
           npm run build --if-present
           npm test
+
+  microservice2: 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - name: Setup and run tests Microservice 2
-      - uses: actions/checkout@v2
         working-directory: ./gig-microservice2
         run: |
           npm ci
